# Primal-Dual-Path-Following

./: README.md  pyproject.toml
src/ampl/: linear.mod
src/primal_dual_path/: __init__.py  primal_dual.py
test/: test_implementation.py
